--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17"
-  }
+  },
+  "engines": {
+  "node": "16.x"
+}
 }
