--- a/package.json
+++ b/package.json
@@ -19,12 +19,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
-    "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start"
+    "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
